Add Slack attachment support

--- a/packs/slack/actions/post_message.yaml
+++ b/packs/slack/actions/post_message.yaml
@@ -9,6 +9,10 @@
       type: "string"
       description: "Message to send."
       required: true
+    attachments:
+      type: "object"
+      description: "Attachments to send."
+      required: false
     username:
       type: "string"
       description: "Bot username."
