clean and fix update_tag

--- a/packs/github/actions/update_tag.yaml
+++ b/packs/github/actions/update_tag.yaml
@@ -20,4 +20,5 @@ parameters:
   object:
     type: string
     description: "SHA to add tag to"
-    required: true
+    required: false
+    default: 'master'
