Use JSON instead of objects

--- a/packs/checkmate/actions/list_deployments_slack_attachments.yaml
+++ b/packs/checkmate/actions/list_deployments_slack_attachments.yaml
@@ -6,6 +6,6 @@
   entry_point: "list_deployments_slack_attachments.py"
   parameters:
     deployments:
-      type: "object"
+      type: "string"
       description: "Dictionary of Checkmate deployments."
       required: true
