--- a/packs/checkmate/actions/show_deployment_slack_attachments.yaml
+++ b/packs/checkmate/actions/show_deployment_slack_attachments.yaml
@@ -5,7 +5,7 @@
   enabled: true
   entry_point: "show_deployment_slack_attachments.py"
   parameters:
-    deployments:
-      type: "object"
+    deployment:
+      type: "string"
       description: "Dictionary of Checkmate deployment details."
       required: true
